# VisualSorterProjectV2

./: CMakeLists.txt  logic.cpp  main.cpp  plot_results.py
algorithms/: bogo_sort.cpp  bubble_sort.cpp  cocktail_sort.cpp  gnome_sort.cpp  heap_sort.cpp  insertion_sort.cpp  quicksort_ipv.cpp  radix_lsd_bucket_sort.cpp  randomize.cpp  selection_sort.cpp  shell_sort.cpp  sorting_algorithms.h  spreadsort.cpp  timsort.cpp
include/: Value.h  sound.hpp
results/: performance_results.txt  performance_results_multi.txt
src/: Value.cpp  sound.cpp
